src/main/java/com/bsuir/maslan/lang/gen/MaslanParser.java
// Generated from D:/My Programs/maslan/src/main/resources\Maslan.g4 by ANTLR 4.7.2
package com.bsuir.maslan.lang.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MaslanParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		VOID_TYPE=1, INT_TYPE=2, VECTOR_TYPE=3, MATRIX_TYPE=4, RETURN=5, MAIN=6, 
		PRINT=7, LEN=8, NCOL=9, NROW=10, SET=11, GET=12, INSERT=13, REMOVE=14, 
		IF=15, ELSE=16, DO=17, WHILE=18, FOR=19, ID=20, INT=21, ASSIGMENT=22, 
		DOT=23, COMMA=24, SEMICOLON=25, LEFT_BRACKET=26, RIGHT_BRACKET=27, LEFT_FIGURE_BRACKET=28, 
		RIGHT_FIGURE_BRACKET=29, ADD=30, SUBTRACT=31, MULTIPLY=32, EQUAL=33, NON_EQUAL=34, 
		LESS=35, GREATER=36, WS=37, SINGLE_COMMENT=38, MULTI_COMMENT=39;
	public static final int
		RULE_program = 0, RULE_block = 1, RULE_returnStatement = 2, RULE_funcAssigment = 3, 
		RULE_funcParams = 4, RULE_funcParam = 5, RULE_funcCall = 6, RULE_funcArgs = 7, 
		RULE_funcArg = 8, RULE_printFunc = 9, RULE_getFunc = 10, RULE_setFunc = 11, 
		RULE_lenFunc = 12, RULE_ncolFunc = 13, RULE_nrowFunc = 14, RULE_insertFunc = 15, 
		RULE_removeFunc = 16, RULE_addingOper = 17, RULE_subtractingOper = 18, 
		RULE_multiplyingOper = 19, RULE_type = 20, RULE_varDeclaration = 21, RULE_assignment = 22, 
		RULE_intAssignment = 23, RULE_setLine = 24, RULE_vectorAssignment = 25, 
		RULE_setLines = 26, RULE_matrixAssignment = 27, RULE_expression = 28, 
		RULE_compOper = 29, RULE_compOperator = 30, RULE_compOperand = 31, RULE_ifStatement = 32, 
		RULE_elseStatement = 33, RULE_condOperator = 34, RULE_doStatement = 35, 
		RULE_whileStatement = 36, RULE_whileOperator = 37, RULE_doWhileOperator = 38, 
		RULE_forOperator = 39, RULE_iterAction = 40, RULE_content = 41, RULE_funcCallStatement = 42;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "block", "returnStatement", "funcAssigment", "funcParams", 
			"funcParam", "funcCall", "funcArgs", "funcArg", "printFunc", "getFunc", 
			"setFunc", "lenFunc", "ncolFunc", "nrowFunc", "insertFunc", "removeFunc", 
			"addingOper", "subtractingOper", "multiplyingOper", "type", "varDeclaration", 
			"assignment", "intAssignment", "setLine", "vectorAssignment", "setLines", 
			"matrixAssignment", "expression", "compOper", "compOperator", "compOperand", 
			"ifStatement", "elseStatement", "condOperator", "doStatement", "whileStatement", 
			"whileOperator", "doWhileOperator", "forOperator", "iterAction", "content", 
			"funcCallStatement"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'void'", "'int'", "'vector'", "'matrix'", "'return'", "'main'", 
			"'print'", "'len'", "'ncol'", "'nrow'", "'set'", "'get'", "'insert'", 
			"'remove'", "'if'", "'else'", "'do'", "'while'", "'for'", null, null, 
			"'='", "'.'", "','", "';'", "'('", "')'", "'{'", "'}'", "'+'", "'-'", 
			"'*'", "'=='", "'!='", "'<'", "'>'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "VOID_TYPE", "INT_TYPE", "VECTOR_TYPE", "MATRIX_TYPE", "RETURN", 
			"MAIN", "PRINT", "LEN", "NCOL", "NROW", "SET", "GET", "INSERT", "REMOVE", 
			"IF", "ELSE", "DO", "WHILE", "FOR", "ID", "INT", "ASSIGMENT", "DOT", 
			"COMMA", "SEMICOLON", "LEFT_BRACKET", "RIGHT_BRACKET", "LEFT_FIGURE_BRACKET", 
			"RIGHT_FIGURE_BRACKET", "ADD", "SUBTRACT", "MULTIPLY", "EQUAL", "NON_EQUAL", 
			"LESS", "GREATER", "WS", "SINGLE_COMMENT", "MULTI_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Maslan.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MaslanParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode MAIN() { return getToken(MaslanParser.MAIN, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public List<FuncAssigmentContext> funcAssigment() {
			return getRuleContexts(FuncAssigmentContext.class);
		}
		public FuncAssigmentContext funcAssigment(int i) {
			return getRuleContext(FuncAssigmentContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MaslanVisitor ) return ((MaslanVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VECTOR_TYPE || _la==MATRIX_TYPE) {
				{
				{
				setState(86);
				funcAssigment();
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(92);
			match(MAIN);
			setState(93);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode LEFT_FIGURE_BRACKET() { return getToken(MaslanParser.LEFT_FIGURE_BRACKET, 0); }
		public TerminalNode RIGHT_FIGURE_BRACKET() { return getToken(MaslanParser.RIGHT_FIGURE_BRACKET, 0); }
		public List<ContentContext> content() {
			return getRuleContexts(ContentContext.class);
		}
		public ContentContext content(int i) {
			return getRuleContext(ContentContext.class,i);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MaslanVisitor ) return ((MaslanVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(LEFT_FIGURE_BRACKET);
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT_TYPE) | (1L << VECTOR_TYPE) | (1L << MATRIX_TYPE) | (1L << IF) | (1L << DO) | (1L << WHILE) | (1L << FOR) | (1L << ID))) != 0)) {
				{
				{
				setState(96);
				content();
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RETURN) {
				{
				setState(102);
				returnStatement();
				}
			}

			setState(105);
			match(RIGHT_FIGURE_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnStatementContext extends ParserRuleContext {
		public TerminalNode RETURN() { return getToken(MaslanParser.RETURN, 0); }
		public TerminalNode SEMICOLON() { return getToken(MaslanParser.SEMICOLON, 0); }
		public TerminalNode ID() { return getToken(MaslanParser.ID, 0); }
		public ReturnStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MaslanVisitor ) return ((MaslanVisitor<? extends T>)visitor).visitReturnStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReturnStatementContext returnStatement() throws RecognitionException {
		ReturnStatementContext _localctx = new ReturnStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_returnStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(RETURN);
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(108);
				match(ID);
				}
			}

			setState(111);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncAssigmentContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(MaslanParser.ID, 0); }
		public TerminalNode LEFT_BRACKET() { return getToken(MaslanParser.LEFT_BRACKET, 0); }
		public TerminalNode RIGHT_BRACKET() { return getToken(MaslanParser.RIGHT_BRACKET, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public FuncParamsContext funcParams() {
			return getRuleContext(FuncParamsContext.class,0);
		}
		public FuncAssigmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcAssigment; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MaslanVisitor ) return ((MaslanVisitor<? extends T>)visitor).visitFuncAssigment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncAssigmentContext funcAssigment() throws RecognitionException {
		FuncAssigmentContext _localctx = new FuncAssigmentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_funcAssigment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			type();
			setState(114);
			match(ID);
			setState(115);
			match(LEFT_BRACKET);
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VECTOR_TYPE || _la==MATRIX_TYPE) {
				{
				setState(116);
				funcParams();
				}
			}

			setState(119);
			match(RIGHT_BRACKET);
			setState(120);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncParamsContext extends ParserRuleContext {
		public List<FuncParamContext> funcParam() {
			return getRuleContexts(FuncParamContext.class);
		}
		public FuncParamContext funcParam(int i) {
			return getRuleContext(FuncParamContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(MaslanParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MaslanParser.COMMA, i);
		}
		public FuncParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcParams; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MaslanVisitor ) return ((MaslanVisitor<? extends T>)visitor).visitFuncParams(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncParamsContext funcParams() throws RecognitionException {
		FuncParamsContext _localctx = new FuncParamsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_funcParams);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			funcParam();
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(123);
				match(COMMA);
				setState(124);
				funcParam();
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncParamContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(MaslanParser.ID, 0); }
		public FuncParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcParam; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MaslanVisitor ) return ((MaslanVisitor<? extends T>)visitor).visitFuncParam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncParamContext funcParam() throws RecognitionException {
		FuncParamContext _localctx = new FuncParamContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_funcParam);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			type();
			setState(131);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncCallContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MaslanParser.ID, 0); }
		public TerminalNode LEFT_BRACKET() { return getToken(MaslanParser.LEFT_BRACKET, 0); }
		public TerminalNode RIGHT_BRACKET() { return getToken(MaslanParser.RIGHT_BRACKET, 0); }
		public FuncArgsContext funcArgs() {
			return getRuleContext(FuncArgsContext.class,0);
		}
		public FuncCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcCall; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MaslanVisitor ) return ((MaslanVisitor<? extends T>)visitor).visitFuncCall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncCallContext funcCall() throws RecognitionException {
		FuncCallContext _localctx = new FuncCallContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_funcCall);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(ID);
			setState(134);
			match(LEFT_BRACKET);
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(135);
				funcArgs();
				}
			}

			setState(138);
			match(RIGHT_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncArgsContext extends ParserRuleContext {
		public List<FuncArgContext> funcArg() {
			return getRuleContexts(FuncArgContext.class);
		}
		public FuncArgContext funcArg(int i) {
			return getRuleContext(FuncArgContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(MaslanParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MaslanParser.COMMA, i);
		}
		public FuncArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcArgs; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MaslanVisitor ) return ((MaslanVisitor<? extends T>)visitor).visitFuncArgs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncArgsContext funcArgs() throws RecognitionException {
		FuncArgsContext _localctx = new FuncArgsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_funcArgs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			funcArg();
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(141);
				match(COMMA);
				setState(142);
				funcArg();
				}
				}
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncArgContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MaslanParser.ID, 0); }
		public FuncArgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcArg; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MaslanVisitor ) return ((MaslanVisitor<? extends T>)visitor).visitFuncArg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncArgContext funcArg() throws RecognitionException {
		FuncArgContext _localctx = new FuncArgContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_funcArg);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintFuncContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MaslanParser.ID, 0); }
		public TerminalNode DOT() { return getToken(MaslanParser.DOT, 0); }
		public TerminalNode PRINT() { return getToken(MaslanParser.PRINT, 0); }
		public TerminalNode LEFT_BRACKET() { return getToken(MaslanParser.LEFT_BRACKET, 0); }
		public TerminalNode RIGHT_BRACKET() { return getToken(MaslanParser.RIGHT_BRACKET, 0); }
		public PrintFuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printFunc; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MaslanVisitor ) return ((MaslanVisitor<? extends T>)visitor).visitPrintFunc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrintFuncContext printFunc() throws RecognitionException {
		PrintFuncContext _localctx = new PrintFuncContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_printFunc);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(ID);
			setState(151);
			match(DOT);
			setState(152);
			match(PRINT);
			setState(153);
			match(LEFT_BRACKET);
			setState(154);
			match(RIGHT_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GetFuncContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MaslanParser.ID, 0); }
		public TerminalNode DOT() { return getToken(MaslanParser.DOT, 0); }
		public TerminalNode GET() { return getToken(MaslanParser.GET, 0); }
		public TerminalNode LEFT_BRACKET() { return getToken(MaslanParser.LEFT_BRACKET, 0); }
		public List<FuncArgContext> funcArg() {
			return getRuleContexts(FuncArgContext.class);
		}
		public FuncArgContext funcArg(int i) {
			return getRuleContext(FuncArgContext.class,i);
		}
		public TerminalNode RIGHT_BRACKET() { return getToken(MaslanParser.RIGHT_BRACKET, 0); }
		public TerminalNode COMMA() { return getToken(MaslanParser.COMMA, 0); }
		public GetFuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_getFunc; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MaslanVisitor ) return ((MaslanVisitor<? extends T>)visitor).visitGetFunc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GetFuncContext getFunc() throws RecognitionException {
		GetFuncContext _localctx = new GetFuncContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_getFunc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			match(ID);
			setState(157);
			match(DOT);
			setState(158);
			match(GET);
			setState(159);
			match(LEFT_BRACKET);
			setState(160);
			funcArg();
			setState(163);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(161);
				match(COMMA);
				setState(162);
				funcArg();
				}
			}

			setState(165);
			match(RIGHT_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SetFuncContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MaslanParser.ID, 0); }
		public TerminalNode DOT() { return getToken(MaslanParser.DOT, 0); }
		public TerminalNode SET() { return getToken(MaslanParser.SET, 0); }
		public TerminalNode LEFT_BRACKET() { return getToken(MaslanParser.LEFT_BRACKET, 0); }
		public List<FuncArgContext> funcArg() {
			return getRuleContexts(FuncArgContext.class);
		}
		public FuncArgContext funcArg(int i) {
			return getRuleContext(FuncArgContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(MaslanParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MaslanParser.COMMA, i);
		}
		public TerminalNode RIGHT_BRACKET() { return getToken(MaslanParser.RIGHT_BRACKET, 0); }
		public SetFuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setFunc; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MaslanVisitor ) return ((MaslanVisitor<? extends T>)visitor).visitSetFunc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SetFuncContext setFunc() throws RecognitionException {
		SetFuncContext _localctx = new SetFuncContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_setFunc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			match(ID);
			setState(168);
			match(DOT);
			setState(169);
			match(SET);
			setState(170);
			match(LEFT_BRACKET);
			setState(171);
			funcArg();
			setState(172);
			match(COMMA);
			setState(173);
			funcArg();
			setState(176);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(174);
				match(COMMA);
				setState(175);
				funcArg();
				}
			}

			setState(178);
			match(RIGHT_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LenFuncContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MaslanParser.ID, 0); }
		public TerminalNode DOT() { return getToken(MaslanParser.DOT, 0); }
		public TerminalNode LEN() { return getToken(MaslanParser.LEN, 0); }
		public TerminalNode LEFT_BRACKET() { return getToken(MaslanParser.LEFT_BRACKET, 0); }
		public TerminalNode RIGHT_BRACKET() { return getToken(MaslanParser.RIGHT_BRACKET, 0); }
		public LenFuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lenFunc; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MaslanVisitor ) return ((MaslanVisitor<? extends T>)visitor).visitLenFunc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LenFuncContext lenFunc() throws RecognitionException {
		LenFuncContext _localctx = new LenFuncContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_lenFunc);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(180);
			match(ID);
			setState(181);
			match(DOT);
			setState(182);
			match(LEN);
			setState(183);
			match(LEFT_BRACKET);
			setState(184);
			match(RIGHT_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
